ARROW-14803: [R] Function not declared in scope

It looks like there was an order-of-imports issue and then one place where a return type wasn't quite right (when altrep wasn't defined). These changes make the old versions pass again (though there might be a better way to accomplish this!)

Closes #11772 from jonkeane/r-versions-fix

Authored-by: Jonathan Keane <jkeane@gmail.com>
Signed-off-by: Nic Crane <thisisnic@gmail.com>